Fixed all calculator buttons & aligned project
Made all of the calculator buttons fully functional while replacing some placeholders like sqrt(x) and +/-. Changed background color to darker and aligned calculator to center of page. Also made color design change to calculator from original questionable design and added new fonts, a history icon, and a delete icon.

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gravitas+One&display=swap');
+@font-face{
+ font-family:'calculator-font';
+ src: url('digital-7.regular.ttf') format('truetype');
+ font-weight: 400;
+ font-style: normal;
+ font-display: swap;
+}
 
 * {
     font-family: 'Michroma', Georgia, 'Times New Roman', Times, serif;
     font-size: 40px;
+    color: white;
 }
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 5, 27);
+    height: 100dvh;
+}
+
+
 #calculator-body {
     display: flex;
     flex-direction: column;
@@ -12,8 +30,13 @@
     width: 600px;
     height: 950px;
     border: 8px solid rgb(44, 0, 44);
-    background-color: purple;
-
+    background-color: rgb(40, 55, 73);
+    border-radius: 32px;
+}
+.title {
+    font-family: 'Gravitas One', Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    margin-bottom: 2px;
 }
 #buttonContainer {
     display: flex;
@@ -26,13 +49,23 @@
     justify-content: center;
     width: 512px;
 }
-.clear, .sqrt, .percent, .decimal, .negate, .add, .subtract, .multiply, .divide, .equal, .zero, .one, .two, .three, .four, .five, .six, .seven, .eight, .nine {
+.clear, .delete, .percent, .decimal, .back, .add, .subtract, .multiply, .divide, .equal, .zero, .one, .two, .three, .four, .five, .six, .seven, .eight, .nine {
     width: 128px;
     height: 128px;
-    background-color: rgb(171, 0, 171);
+    background-color: rgb(40, 55, 73);
     border: 4px solid rgb(44, 0, 44);
     border-radius: 8px;
     margin: 8px;
+}
+.delete, .back {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.delete img, .back img {
+    width: 50px;
+    height: 50px;
+    filter: invert()
 }
 #screen {
     display: flex;
@@ -40,9 +73,12 @@
     height: 128px;
     border: 8px solid rgb(44, 0, 44);
     margin: 16px;
-    background-color: rgb(171, 0, 171);
+    background-color: rgb(110, 133, 91);
     border-radius: 4px;
+    color: black;
+    font-family: 'calculator-font', Georgia, 'Times New Roman', Times, serif;
+    font-size: 80px;
 }
 #hoverer:hover {
-    background-color:  rgb(161, 0, 161);
+    background-color:  rgb(47, 68, 93)
 }
